@@ -1,3 +1,7 @@
+2022-06-25  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/generic/file.h: Added
+
 2022-06-24  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Added packages "arch-*" and "asm"
